--- a/about.cfg
+++ b/about.cfg
@@ -12,6 +12,12 @@
     [/entry]
 [/about]
 [about]
+    title= _ "Co-Developer"
+    [entry]
+        name="Roge_Tebnelok"
+    [/entry]
+[/about]
+[about]
     title= _ "Map Redesign Assistance"
     [entry]
         name="GreenScarab"
