--- a/scenarios/01_A_New_Chance.cfg
+++ b/scenarios/01_A_New_Chance.cfg
@@ -5,12 +5,12 @@
     name= _ "A New Chance"
     next_scenario=02_Brother_Against_Brother
     map_file=01_A_New_Chance.map
-    {TURNS 36 32 28}
-    {DEFAULT_SCHEDULE_DUSK}
+    {TURNS 38 34 30}
+    {DEEP_SCHEDULE_DUSK}
 
     {INTRO_AND_SCENARIO_MUSIC underground.ogg revelation.ogg}
     {EXTRA_SCENARIO_MUSIC snowfall.ogg}
-    {EXTRA_SCENARIO_MUSIC into_the_shadows.ogg}
+    {EXTRA_SCENARIO_MUSIC gameplay06.ogg}
 
     [event]
         name=prestart
@@ -112,10 +112,6 @@
         facing=ne
         {FLAG_VARIANT6 ragged}
 
-#ifdef HARD
-        {GENERIC_GUARD_UNIT 3 (Swamp Lizard) 25 17}
-#endif
-
         {GENERIC_UNIT 3 (Naga Dirkfang) 8 15}
         {GENERIC_UNIT 3 (Naga Fighter) 10 17}
     [/side]
@@ -130,7 +126,9 @@
 
         # This is for mood and has no particular meaning.
         # It becomes more bluish as the campaign progresses into the second half.
-        {COLOR_ADJUST 15 -15 -15}
+        # {COLOR_ADJUST 15 -15 -15}
+
+        # Update: now macro as the schedules.
     [/event]
 
     [event]
@@ -202,6 +200,8 @@
             x,y=34,6
             radius=3
         [/place_shroud]
+
+        {UNCLEAR_FOG}
     [/event]
 
     [event]
@@ -225,7 +225,7 @@
             y=16
             facing=se
             side=1
-            hitpoints=28
+            hitpoints={ON_DIFFICULTY 34 28 24}
             [modifications]
                 {TRAIT_LOYAL}
             [/modifications]
@@ -259,12 +259,16 @@
         name=victory
 
         # Essentially fade-out is desirable. This is tentative.
-        {REPLACE_SCENARIO_MUSIC silence.ogg}
+        # {REPLACE_SCENARIO_MUSIC silence.ogg}
+
+        # Update: refer to sounds.cfg.
+        {FADE_MUSIC_OUT 1000}
         {MYSTERIOUS_VOICE ( _ "Gwiti — you must not delay. Your destiny is at hand.")}
 
         [message]
             speaker="Gwiti Ha'atel"
             message= _ "What? Who the hell are you? Why are you speaking to my heart?"
+            sound=wail-sml.wav
         [/message]
 
         {MYSTERIOUS_VOICE ( _ "Your brother Nati is exploring this land, just like you. And from now on you must confront him, for one of you brothers shall be destroyed.")}
@@ -272,6 +276,9 @@
         [sound]
             name=wail-long.wav
         [/sound]
+
+        {REPLACE_SCENARIO_MUSIC silence.ogg}
+        {FADE_MUSIC_IN 1000}
     [/event]
 
     [event]
