--- a/scenarios/02_Brother_Against_Brother.cfg
+++ b/scenarios/02_Brother_Against_Brother.cfg
@@ -6,21 +6,21 @@
     next_scenario=03_The_Skull_of_Morgorath
     map_file=02_Brother_Against_Brother.map
     {TURNS 28 26 24}
-    {DUSK}
-    {DUSK}
-    {FIRST_WATCH}
-    {FIRST_WATCH}
-    {FIRST_WATCH}
-    {SECOND_WATCH}
-    {SECOND_WATCH}
-    {SECOND_WATCH}
-    {DAWN}
-    {DAWN}
-    {MORNING}
-    {AFTERNOON}
+    {DEEP_DUSK}
+    {DEEP_DUSK}
+    {DEEP_FIRST_WATCH}
+    {DEEP_FIRST_WATCH}
+    {DEEP_FIRST_WATCH}
+    {DEEP_SECOND_WATCH}
+    {DEEP_SECOND_WATCH}
+    {DEEP_SECOND_WATCH}
+    {DEEP_DAWN}
+    {DEEP_DAWN}
+    {DEEP_MORNING}
+    {DEEP_AFTERNOON}
 
-    {INTRO_AND_SCENARIO_MUSIC underground.ogg vengeful.ogg}
-    {EXTRA_SCENARIO_MUSIC battle-epic.ogg}
+    {INTRO_AND_SCENARIO_MUSIC revelation.ogg vengeful.ogg}
+    {EXTRA_SCENARIO_MUSIC frantic.ogg}
 
     [event]
         name=prestart
@@ -100,7 +100,7 @@
             facing=sw
         [/recall]
 
-        {COLOR_ADJUST 15 -15 -15}
+        # {COLOR_ADJUST 15 -15 -15}
     [/event]
 
     [event]
@@ -180,9 +180,13 @@
         {MYSTERIOUS_VOICE ( _ "How does it feel to face your foolish brother? Whether you can resist your destiny depends upon your magic.")}
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "You again... Where the hell are you now?"
+            message= _ "You again... Who the hell are you?"
         [/message]
-        {MYSTERIOUS_VOICE ( _ "One Lord to lead the Dark Hordes is more than enough.")}
+        {MYSTERIOUS_VOICE ( _ "One Lord to lead the Dark Hordes is more than enough — Gwiti.")}
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "Where the hell are you now?"
+        [/message]
         {QUAKE rumble.ogg}
     [/event]
 
@@ -267,7 +271,7 @@
         [/message]
         [message]
             speaker=Leganoth
-            message= _ "You must have the Skull of Morgorath. One of the sacrifices of the World is calling you... I am here to give you the News."
+            message= _ "You must have the Skull of Morgorath. One of the sacrifices of the world is calling you... I am here to give you the News."
         [/message]
         [endlevel]
             result=victory
