--- a/utils/intro.cfg
+++ b/utils/intro.cfg
@@ -3,16 +3,8 @@
 #define TDH_INTRO
     [story]
         [part]
-            title= _ "<b>The Dark Hordes</b>
-Episode I"
-        [/part]
-        [part]
-            title= _ "Episode I
-<b>Escape the Living</b>"
-        [/part]
-        [part]
+            title= _ "<i>Episode I: <b>Escape the Living</b></i>"
             story= _ "At the Great Battle at the Stone of Erzen, the brothers Gwiti and Nati Ha’atel showed their skills for the first time: believing that their side was losing the battle, they called upon the corpses of former enemies to rise again and fight on their side."
-            background=story/tdh_intro_01.webp
         [/part]
         [part]
             story= _ "However, not only was this forbidden, but rash as well. The cavalry meant to come as reinforcements instead clashed with the undead legions, and so the battle was lost where it would have been won had it not been for these two dark sorcerers."
@@ -24,7 +16,6 @@ Episode I"
         [/part]
         [part]
             story= _ "But Fate intervened. The ship carrying Gwiti and Nati was beset by the sudden storm and disintegrated, separating the brothers and washing them both ashore. This was the beginning of the Rise of the Dark Hordes."
-            background=story/tdh_intro_02.webp
         [/part]
     [/story]
 #enddef
