--- a/utils/terrain_graphics.cfg
+++ b/utils/terrain_graphics.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth-tdh
 
 #define RAIN
-    # Used from the To Lands Unknown campaign.
+    # Used from the To Lands Unknown.
     [terrain_graphics]
         map="
 1
