Add rescue events

--- a/scenarios/01_A_New_Chance.cfg
+++ b/scenarios/01_A_New_Chance.cfg
@@ -38,8 +38,15 @@
     {STARTING_VILLAGES 3 1}
     {STARTING_VILLAGES 1 3}
 
+    {PLACE_IMAGE items/key.png 12 2}
+
     {PLACE_IMAGE "units/undead-skeletal/deathsquire.png~RC(magenta>red)" 17 17}
     {PLACE_IMAGE items/cage.png 17 17}
+
+    {PLACE_IMAGE scenery/gore-4.png 28 10}
+    {PLACE_IMAGE items/cage.png 28 10}
+
+    {PLACE_IMAGE scenery/gore-4.png 35 16}
 
     [side]
         type=Initiate
@@ -129,6 +136,8 @@
         # {COLOR_ADJUST 15 -15 -15}
 
         # Update: now macro as the schedules.
+
+        {VARIABLE key 0}
     [/event]
 
     [event]
@@ -204,15 +213,38 @@
         {UNCLEAR_FOG}
     [/event]
 
+    # Series of rescue events.
+    # Only in this events you can get special units.
     [event]
         name=moveto
         [filter]
-            side=1
-            x,y=17,17
+            id="Gwiti Ha'atel"
+            x,y=12,2
         [/filter]
         [message]
             speaker=unit
-            message= _ "Who are you in the cage?"
+            message= _ "This key could be used for something..."
+        [/message]
+        [remove_item]
+            x,y=$x1,$y1
+        [/remove_item]
+        {VARIABLE key 1}
+    [/event]
+    [event]
+        name=moveto
+        [filter]
+            id="Gwiti Ha'atel"
+            x,y=17,17
+        [/filter]
+        [filter_condition]
+            [variable]
+                name=key
+                numerical_equals=1
+            [/variable]
+        [/filter_condition]
+        [message]
+            speaker=unit
+            message= _ "It seems that this cage will open with the key I picked up. I wonder who is being captured?"
         [/message]
         [remove_item]
             x,y=$x1,$y1
@@ -228,6 +260,7 @@
             hitpoints={ON_DIFFICULTY 34 28 24}
             [modifications]
                 {TRAIT_LOYAL}
+                {TRAIT_STRONG}
             [/modifications]
         [/unit]
         [redraw]
@@ -239,9 +272,116 @@
             sound=skeleton-big-hit-2.ogg
         [/message]
         [message]
-            speaker="Gwiti Ha'atel"
+            speaker=unit
             message= _ "I have already sent many of them to their deaths. You should join my uprising."
-            scroll=no
+        [/message]
+        [message]
+            speaker=Gabtur
+            message= _ "There must be another one captured somewhere... He was the warrior under my command."
+        [/message]
+        [message]
+            speaker=unit
+            message= _ "But all I picked up was the key for you."
+        [/message]
+        {VARIABLE key 2}
+    [/event]
+    [event]
+        name=moveto
+        [filter]
+            side=1
+            x,y=28,10
+        [/filter]
+        [message]
+            speaker=unit
+            message= _ "This cage is already empty. Bloodstains can be seen here and there."
+        [/message]
+        [if]
+            [variable]
+                name=key
+                numerical_equals=2
+            [/variable]
+            [then]
+                [message]
+                    speaker="Gwiti Ha'atel"
+                    message= _ "Look for someone nearby!"
+                    scroll=no
+                [/message]
+            [/then]
+        [/if]
+    [/event]
+    [event]
+        name=moveto
+        [filter]
+            side=1
+            x,y=35,16
+        [/filter]
+        [if]
+            [variable]
+                name=key
+                numerical_equals=2
+            [/variable]
+            [then]
+                [unit]
+                    id=Vrork
+                    name= _ "Vrork"
+                    type=Bone Knight
+                    x=34
+                    y=15
+                    facing=nw
+                    side=1
+                    hitpoints=14
+                    [modifications]
+                        {TRAIT_LOYAL}
+                        {TRAIT_RESILIENT}
+                    [/modifications]
+                [/unit]
+                [redraw]
+                    side=1
+                [/redraw]
+                [message]
+                    speaker=Vrork
+                    message= _ "Argh! Are you going to kill me again?"
+                    sound=skeleton-big-hit-2.ogg
+                [/message]
+                [message]
+                    speaker="Gwiti Ha'atel"
+                    message= _ "I saved your Lord... We are not your enemies."
+                    scroll=no
+                [/message]
+                [if]
+                    [have_unit]
+                        # When Gabtur dies you do not receive the achievement.
+                        id=Gabtur
+                    [/have_unit]
+                    [then]
+                        [message]
+                            speaker=Gabtur
+                            message= _ "Vrork! This is the time to take revenge upon the monsters of this land!"
+                            scroll=no
+                        [/message]
+                        [set_achievement]
+                            content_for=the_dark_hordes_revised
+                            id=tdh_S01
+                        [/set_achievement]
+                    [/then]
+                [/if]
+            [/then]
+            [else]
+                [message]
+                    speaker=unit
+                    message= _ "What the hell happened here?"
+                [/message]
+            [/else]
+        [/if]
+    [/event]
+    [event]
+        name=last breath
+        [filter]
+            id=Gabtur
+        [/filter]
+        [message]
+            speaker=unit
+            message= _ "So this is my doom..."
         [/message]
     [/event]
 
@@ -279,6 +419,8 @@
 
         {REPLACE_SCENARIO_MUSIC silence.ogg}
         {FADE_MUSIC_IN 1000}
+
+        {CLEAR_VARIABLE key}
     [/event]
 
     [event]
