--- a/achievements.cfg
+++ b/achievements.cfg
@@ -1,1 +1,20 @@
 #textdomain wesnoth-tdh
+
+[achievement_group]
+    display_name=_"The Dark Hordes Revised" #wmllint: ignore
+    content_for=the_dark_hordes_revised
+    [achievement]
+        id="tdh_S01"
+        name= _ "Scenario 1: Save the Darkness"
+        description= _ "Rescue two undead being captured in ‘<i>A New Chance</i>’ scenario."
+        icon="data/core/images/attacks/battleaxe-undead.png"
+        icon_completed="data/core/images/attacks/battleaxe-undead.png~SCALE(72,72)~BLIT("data/core/images/misc/achievement-frames/frame-8-acid.png",0,0)"
+    [/achievement]
+#   [achievement]
+#       id="tdh_S02"
+#       name= _ "Scenario 2: Cold Mercy"
+#       description= _ "..."
+#       icon="data/core/images/attacks/dark-missile.png"
+#       icon_completed="data/core/images/attacks/dark-missile.png~SCALE(72,72)~BLIT("data/core/images/misc/achievement-frames/frame-8-acid.png",0,0)"
+#   [/achievement]
+[/achievement_group]
