--- a/01_A_New_Chance.cfg
+++ b/01_A_New_Chance.cfg
@@ -3,7 +3,7 @@
 	id=01_A_New_Chance
 	name= _ "A New Chance"
 	next_scenario=02_Brother_Against_Brother
-	map_file=01_A_New_Chance_reversed.map
+	map_file=01_A_New_Chance_distance_corrected.map
 	victory_when_enemies_defeated=no
 	{TURNS 36 32 28}
 	{DEFAULT_SCHEDULE_DUSK}
@@ -42,7 +42,7 @@
 			canrecruit=yes
 			unrenamable=yes
 			hitpoints=12
-			x,y=2,17
+			x,y=2,19
 			facing=ne
 			[modifications]
 				{TRAIT_PRONE}
@@ -176,6 +176,7 @@
 				[/effect]
 			[/object]
 		[/modify_unit]
+
 	[/event]
 	[event]
 		name=start
@@ -183,6 +184,179 @@
 			speaker="Gwiti Ha'atel"
 			message= _ "..."
 		[/message]
+	[/event]
+	[event]
+		name=moveto
+		first_time_only=yes
+		[filter]
+			id="Gwiti Ha'atel"
+			[filter_location]
+				terrain=Khr
+			[/filter_location]
+		[/filter]
+		[message]
+			speaker="Gwiti Ha'atel"
+			message= _ "..."
+		[/message]
+		[animate_unit]
+			flag=recruiting
+			[filter]
+				id="Gwiti Ha'atel"
+			[/filter]
+			hits=no
+		[/animate_unit]
+		{VARIABLE castle1.x $x1}
+		{VARIABLE_OP castle1.x add 1}
+		{VARIABLE castle1.y $y1}
+		{VARIABLE_OP castle1.y add -1}
+		{VARIABLE castle2.x $x1}
+		{VARIABLE castle2.y $y1}
+		{VARIABLE_OP castle2.y add -1}
+		{VARIABLE castle3.x $x1}
+		{VARIABLE_OP castle3.x add -1}
+		{VARIABLE castle3.y $y1}
+		{VARIABLE_OP castle3.y add -1}
+		{VARIABLE castle4.x $x1}
+		{VARIABLE_OP castle4.x add 1}
+		{VARIABLE castle4.y $y1}
+		{VARIABLE castle5.x $x1}
+		{VARIABLE castle5.y $y1}
+		{VARIABLE_OP castle5.y add 1}
+		{VARIABLE castle6.x $x1}
+		{VARIABLE_OP castle6.x add -1}
+		{VARIABLE castle6.y $y1}
+		[if]
+			[have_unit]
+				id="Gwiti Ha'atel"
+				type=Prone Dark Adept
+			[/have_unit]
+			[then]
+				[unit]
+					type=Skeleton
+					x,y=$castle1.x,$castle1.y
+					side=1
+					moves=0
+					attacks_left=0
+					animate=yes
+				[/unit]
+				[unit]
+					type=Skeleton Archer
+					x,y=$castle2.x,$castle2.y
+					side=1
+					moves=0
+					attacks_left=0
+					animate=yes
+				[/unit]
+				[message]
+					speaker="Gwiti Ha'atel"
+					message= _ "..."
+				[/message]
+			[/then]
+			[elseif]
+				[have_unit]
+					id="Gwiti Ha'atel"
+					type=Shackled Dark Adept
+				[/have_unit]
+				[then]
+					[unit]
+						type=Skeleton
+						x,y=$castle1.x,$castle1.y
+						side=1
+						moves=0
+						attacks_left=0
+						animate=yes
+					[/unit]
+					[unit]
+						type=Skeleton Archer
+						x,y=$castle2.x,$castle2.y
+						side=1
+						moves=0
+						attacks_left=0
+						animate=yes
+					[/unit]
+					[unit]
+						type=Skeleton
+						x,y=$castle3.x,$castle3.y
+						side=1
+						moves=0
+						attacks_left=0
+						animate=yes
+					[/unit]
+					[unit]
+						type=Skeleton Archer
+						x,y=$castle4.x,$castle4.y
+						side=1
+						moves=0
+						attacks_left=0
+						animate=yes
+					[/unit]
+					[message]
+						speaker="Gwiti Ha'atel"
+						message= _ "..."
+					[/message]
+				[/then]
+			[/elseif]
+			[elseif]
+				[have_unit]
+					id="Gwiti Ha'atel"
+					type=Dark Adept
+				[/have_unit]
+				[then]
+					[unit]
+						type=Skeleton
+						x,y=$castle1.x,$castle1.y
+						side=1
+						moves=0
+						attacks_left=0
+						animate=yes
+					[/unit]
+					[unit]
+						type=Skeleton Archer
+						x,y=$castle2.x,$castle2.y
+						side=1
+						moves=0
+						attacks_left=0
+						animate=yes
+					[/unit]
+					[unit]
+						type=Skeleton
+						x,y=$castle3.x,$castle3.y
+						side=1
+						moves=0
+						attacks_left=0
+						animate=yes
+					[/unit]
+					[unit]
+						type=Skeleton Archer
+						x,y=$castle4.x,$castle4.y
+						side=1
+						moves=0
+						attacks_left=0
+						animate=yes
+					[/unit]
+					[unit]
+						type=Skeleton
+						x,y=$castle5.x,$castle5.y
+						side=1
+						moves=0
+						attacks_left=0
+						animate=yes
+					[/unit]
+					[unit]
+						type=Skeleton Archer
+						x,y=$castle6.x,$castle6.y
+						side=1
+						moves=0
+						attacks_left=0
+						animate=yes
+					[/unit]
+					[message]
+						speaker="Gwiti Ha'atel"
+						message= _ "..."
+					[/message]
+				[/then]
+			[/elseif]
+		[/if]
 	[/event]
 	[event]
 		name=exit_hex
@@ -247,18 +421,160 @@
 			[/elseif]
 		[/if]
 	[/event]
-#[filter_location] doesn't work#
 	[event]
 		name=side 1 turn refresh
 		first_time_only=no
 		[if]
-			[variable]
-				name="prone"
-				equals=yes
-			[/variable]
+			[have_unit]
+				id="Gwiti Ha'atel"
+				type=Prone Dark Adept
+				[filter_location]
+					terrain=*^V*
+				[/filter_location]
+			[/have_unit]
 			[then]
-				{VARIABLE "prone" no}
+				{CLEAR_VARIABLE "prone"}
+				[transform_unit]
+					id="Gwiti Ha'atel"
+					transform_to=Shackled Dark Adept
+				[/transform_unit]
+				[remove_trait]
+					id="Gwiti Ha'atel"
+					trait_id=prone
+				[/remove_trait]
+				[remove_object]
+					id="Gwiti Ha'atel"
+					object_id=prone
+				[/remove_object]
+				[modify_unit]
+					[filter]
+						id="Gwiti Ha'atel"
+					[/filter]
+					[object]
+						id=shackled
+						[effect]
+							apply_to=vision
+							increase=2
+						[/effect]
+					[/object]
+				[/modify_unit]
+				[redraw]
+					clear_shroud=yes
+				[/redraw]
+				[message]
+					speaker="Gwiti Ha'atel"
+					message= _ "..."
+				[/message]
+				{MODIFY_UNIT id="Gwiti Ha'atel" facing nw}
+				[delay]
+					time=1000
+				[/delay]
+				{MODIFY_UNIT id="Gwiti Ha'atel" facing se}
+				[delay]
+					time=1000
+				[/delay]
+				{MODIFY_UNIT id="Gwiti Ha'atel" facing ne}
+				[message]
+					speaker="Gwiti Ha'atel"
+					message= _ "..."
+				[/message]
+				[animate_unit]
+					flag=recruiting
+					[filter]
+						id="Gwiti Ha'atel"
+					[/filter]
+					hits=no
+				[/animate_unit]
+				{CLEAR_VARIABLE "shackled"}
+				[transform_unit]
+					id="Gwiti Ha'atel"
+					transform_to=Dark Adept
+				[/transform_unit]
+				[remove_trait]
+					id="Gwiti Ha'atel"
+					trait_id=shackled
+				[/remove_trait]
+				[remove_object]
+					id="Gwiti Ha'atel"
+					object_id=shackled
+				[/remove_object]
+				[store_unit]
+					[filter]
+						id="Gwiti Ha'atel"
+					[/filter]
+					variable=unit
+				[/store_unit]
+				[set_variable]
+					name=unit.moves
+					value=$unit.max_moves
+				[/set_variable]
+				[unstore_unit]
+					variable=unit
+					find_vacant=no
+				[/unstore_unit]
+				[message]
+					speaker="Gwiti Ha'atel"
+					message= _ "..."
+				[/message]
 			[/then]
+			[elseif]
+				[have_unit]
+					id="Gwiti Ha'atel"
+					type=Shackled Dark Adept
+					[filter_location]
+						terrain=*^V*
+					[/filter_location]
+				[/have_unit]
+				[then]
+					[animate_unit]
+						flag=recruiting
+						[filter]
+							id="Gwiti Ha'atel"
+						[/filter]
+						hits=no
+					[/animate_unit]
+					{CLEAR_VARIABLE "shackled"}
+					[transform_unit]
+						id="Gwiti Ha'atel"
+						transform_to=Dark Adept
+					[/transform_unit]
+					[remove_trait]
+						id="Gwiti Ha'atel"
+						trait_id=shackled
+					[/remove_trait]
+					[remove_object]
+						id="Gwiti Ha'atel"
+						object_id=shackled
+					[/remove_object]
+					[store_unit]
+						[filter]
+							id="Gwiti Ha'atel"
+						[/filter]
+						variable=unit
+					[/store_unit]
+					[set_variable]
+						name=unit.moves
+						value=$unit.max_moves
+					[/set_variable]
+					[unstore_unit]
+						variable=unit
+						find_vacant=no
+					[/unstore_unit]
+					[message]
+						speaker="Gwiti Ha'atel"
+						message= _ "..."
+					[/message]
+				[/then]
+			[/elseif]
+			[elseif]
+				[variable]
+					name="prone"
+					equals=yes
+				[/variable]
+				[then]
+					{VARIABLE "prone" no}
+				[/then]
+			[/elseif]
 			[elseif]
 				[variable]
 					name="prone"
@@ -326,149 +642,6 @@
 					name="shackled"
 					equals=no
 				[/variable]
-				[then]
-					[animate_unit]
-						flag=recruiting
-						[filter]
-							id="Gwiti Ha'atel"
-						[/filter]
-						hits=no
-					[/animate_unit]
-					{CLEAR_VARIABLE "shackled"}
-					[transform_unit]
-						id="Gwiti Ha'atel"
-						transform_to=Dark Adept
-					[/transform_unit]
-					[remove_trait]
-						id="Gwiti Ha'atel"
-						trait_id=shackled
-					[/remove_trait]
-					[remove_object]
-						id="Gwiti Ha'atel"
-						object_id=shackled
-					[/remove_object]
-					[store_unit]
-						[filter]
-							id="Gwiti Ha'atel"
-						[/filter]
-						variable=unit
-					[/store_unit]
-					[set_variable]
-						name=unit.moves
-						value=$unit.max_moves
-					[/set_variable]
-					[unstore_unit]
-						variable=unit
-						find_vacant=no
-					[/unstore_unit]
-					[message]
-						speaker="Gwiti Ha'atel"
-						message= _ "..."
-					[/message]
-				[/then]
-			[/elseif]
-			[elseif]
-				[have_unit]
-					id="Gwiti Ha'atel"
-					type=Prone Dark Adept
-					[filter_location]
-						terrain=Gd^Vhr,Ww^Vm,Hhd^Vhcr,Hh^Vhh,Hhd^Vc,Gd^Ve,Gs^Vc,Gd^Vhhr
-					[/filter_location]
-				[/have_unit]
-				[then]
-					{CLEAR_VARIABLE "prone"}
-					[transform_unit]
-						id="Gwiti Ha'atel"
-						transform_to=Shackled Dark Adept
-					[/transform_unit]
-					[remove_trait]
-						id="Gwiti Ha'atel"
-						trait_id=prone
-					[/remove_trait]
-					[remove_object]
-						id="Gwiti Ha'atel"
-						object_id=prone
-					[/remove_object]
-					[modify_unit]
-						[filter]
-							id="Gwiti Ha'atel"
-						[/filter]
-						[object]
-							id=shackled
-							[effect]
-								apply_to=vision
-								increase=2
-							[/effect]
-						[/object]
-					[/modify_unit]
-					[redraw]
-						clear_shroud=yes
-					[/redraw]
-					[message]
-						speaker="Gwiti Ha'atel"
-						message= _ "..."
-					[/message]
-					{MODIFY_UNIT id="Gwiti Ha'atel" facing nw}
-					[delay]
-						time=1000
-					[/delay]
-					{MODIFY_UNIT id="Gwiti Ha'atel" facing se}
-					[delay]
-						time=1000
-					[/delay]
-					{MODIFY_UNIT id="Gwiti Ha'atel" facing ne}
-					[message]
-						speaker="Gwiti Ha'atel"
-						message= _ "..."
-					[/message]
-					[animate_unit]
-						flag=recruiting
-						[filter]
-							id="Gwiti Ha'atel"
-						[/filter]
-						hits=no
-					[/animate_unit]
-					{CLEAR_VARIABLE "shackled"}
-					[transform_unit]
-						id="Gwiti Ha'atel"
-						transform_to=Dark Adept
-					[/transform_unit]
-					[remove_trait]
-						id="Gwiti Ha'atel"
-						trait_id=shackled
-					[/remove_trait]
-					[remove_object]
-						id="Gwiti Ha'atel"
-						object_id=shackled
-					[/remove_object]
-					[store_unit]
-						[filter]
-							id="Gwiti Ha'atel"
-						[/filter]
-						variable=unit
-					[/store_unit]
-					[set_variable]
-						name=unit.moves
-						value=$unit.max_moves
-					[/set_variable]
-					[unstore_unit]
-						variable=unit
-						find_vacant=no
-					[/unstore_unit]
-					[message]
-						speaker="Gwiti Ha'atel"
-						message= _ "..."
-					[/message]
-				[/then]
-			[/elseif]
-			[elseif]
-				[have_unit]
-					id="Gwiti Ha'atel"
-					type=Shackled Dark Adept
-					[filter_location]
-						terrain=Gd^Vhr,Ww^Vm,Hhd^Vhcr,Hh^Vhh,Hhd^Vc,Gd^Ve,Gs^Vc,Gd^Vhhr
-					[/filter_location]
-				[/have_unit]
 				[then]
 					[animate_unit]
 						flag=recruiting
