--- a/scenarios/01_A_New_Chance.cfg
+++ b/scenarios/01_A_New_Chance.cfg
@@ -205,18 +205,26 @@
 			[/filter]
 			hits=no
 		[/animate_unit]
-		{VARIABLE castle1.x $x1-1}
-		{VARIABLE castle1.y $y1+1}
-		{VARIABLE castle2.x $x1-1}
+		{VARIABLE castle1.x $x1}
+		{VARIABLE_OP castle1.x add 1}
+		{VARIABLE castle1.y $y1}
+		{VARIABLE_OP castle1.y add -1}
+		{VARIABLE castle2.x $x1}
 		{VARIABLE castle2.y $y1}
-		{VARIABLE castle3.x $x1+1}
-		{VARIABLE castle3.y $y1+1}
-		{VARIABLE castle4.x $x1-1}
-		{VARIABLE castle4.y $y1-1}
-		{VARIABLE castle5.x $x1+1}
+		{VARIABLE_OP castle2.y add -1}
+		{VARIABLE castle3.x $x1}
+		{VARIABLE_OP castle3.x add -1}
+		{VARIABLE castle3.y $y1}
+		{VARIABLE_OP castle3.y add -1}
+		{VARIABLE castle4.x $x1}
+		{VARIABLE_OP castle4.x add 1}
+		{VARIABLE castle4.y $y1}
+		{VARIABLE castle5.x $x1}
 		{VARIABLE castle5.y $y1}
-		{VARIABLE castle6.x $x1+1}
-		{VARIABLE castle6.y $y1-1}
+		{VARIABLE_OP castle5.y add 1}
+		{VARIABLE castle6.x $x1}
+		{VARIABLE_OP castle6.x add -1}
+		{VARIABLE castle6.y $y1}
 		[if]
 			[have_unit]
 				id="Gwiti Ha'atel"
@@ -225,20 +233,26 @@
 			[then]
 				[unit]
 					type=Skeleton
-					x,y=castle1.x,castle1.y
+					x,y=$castle1.x,$castle1.y
 					side=1
 					moves=0
 					attacks_left=0
 					animate=yes
 				[/unit]
+				[redraw]
+					clear_shroud=yes
+				[/redraw]
 				[unit]
 					type=Skeleton Archer
-					x,y=castle2.x,castle2.y
+					x,y=$castle2.x,$castle2.y
 					side=1
 					moves=0
 					attacks_left=0
 					animate=yes
 				[/unit]
+				[redraw]
+					clear_shroud=yes
+				[/redraw]
 				[message]
 					speaker="Gwiti Ha'atel"
 					message= _ "..."
@@ -252,36 +266,48 @@
 				[then]
 					[unit]
 						type=Skeleton
-						x,y=castle1.x,castle1.y
+						x,y=$castle1.x,$castle1.y
 						side=1
 						moves=0
 						attacks_left=0
 						animate=yes
 					[/unit]
+					[redraw]
+						clear_shroud=yes
+					[/redraw]
 					[unit]
 						type=Skeleton Archer
-						x,y=castle2.x,castle2.y
+						x,y=$castle2.x,$castle2.y
 						side=1
 						moves=0
 						attacks_left=0
 						animate=yes
 					[/unit]
+					[redraw]
+						clear_shroud=yes
+					[/redraw]
 					[unit]
 						type=Skeleton
-						x,y=castle3.x,castle3.y
+						x,y=$castle3.x,$castle3.y
 						side=1
 						moves=0
 						attacks_left=0
 						animate=yes
 					[/unit]
+					[redraw]
+						clear_shroud=yes
+					[/redraw]
 					[unit]
 						type=Skeleton Archer
-						x,y=castle4.x,castle4.y
+						x,y=$castle4.x,$castle4.y
 						side=1
 						moves=0
 						attacks_left=0
 						animate=yes
 					[/unit]
+					[redraw]
+						clear_shroud=yes
+					[/redraw]
 					[message]
 						speaker="Gwiti Ha'atel"
 						message= _ "..."
@@ -296,52 +322,70 @@
 				[then]
 					[unit]
 						type=Skeleton
-						x,y=castle1.x,castle1.y
+						x,y=$castle1.x,$castle1.y
 						side=1
 						moves=0
 						attacks_left=0
 						animate=yes
 					[/unit]
+					[redraw]
+						clear_shroud=yes
+					[/redraw]
 					[unit]
 						type=Skeleton Archer
-						x,y=castle2.x,castle2.y
+						x,y=$castle2.x,$castle2.y
 						side=1
 						moves=0
 						attacks_left=0
 						animate=yes
 					[/unit]
+					[redraw]
+						clear_shroud=yes
+					[/redraw]
 					[unit]
 						type=Skeleton
-						x,y=castle3.x,castle3.y
+						x,y=$castle3.x,$castle3.y
 						side=1
 						moves=0
 						attacks_left=0
 						animate=yes
 					[/unit]
+					[redraw]
+						clear_shroud=yes
+					[/redraw]
 					[unit]
 						type=Skeleton Archer
-						x,y=castle4.x,castle4.y
+						x,y=$castle4.x,$castle4.y
 						side=1
 						moves=0
 						attacks_left=0
 						animate=yes
 					[/unit]
+					[redraw]
+						clear_shroud=yes
+					[/redraw]
 					[unit]
 						type=Skeleton
-						x,y=castle5.x,castle5.y
+						x,y=$castle5.x,$castle5.y
 						side=1
 						moves=0
 						attacks_left=0
 						animate=yes
 					[/unit]
+					[redraw]
+						clear_shroud=yes
+					[/redraw]
 					[unit]
 						type=Skeleton Archer
-						x,y=castle6.x,castle6.y
+						x,y=$castle6.x,$castle6.y
 						side=1
 						moves=0
 						attacks_left=0
 						animate=yes
 					[/unit]
+					[redraw]
+						clear_shroud=yes
+					[/redraw]
 					[message]
 						speaker="Gwiti Ha'atel"
 						message= _ "..."
@@ -572,6 +616,26 @@
 					name="prone"
 					equals=no
 				[/variable]
+#"resting=yes" is ignored, event is triggered on every side 1 turn refresh.#
+				#[have_unit]
+					#id="Gwiti Ha'atel"
+					#type=Prone Dark Adept
+					#resting=yes
+				#[/have_unit]
+#[status]resting=yes[/status] is ignored, event is triggered on every side 1 turn refresh.#
+				#[have_unit]
+					#id="Gwiti Ha'atel"
+					#type=Prone Dark Adept
+					#[status]
+						#resting=yes"
+					#[/status]
+				#[/have_unit]
+#event isn't triggered at all, even if Gwiti doesn't move.#
+				#[have_unit]
+					#id="Gwiti Ha'atel"
+					#type=Prone Dark Adept
+					#formula="(resting=yes)"
+				#[/have_unit]
 				[then]
 					{CLEAR_VARIABLE "prone"}
 					[transform_unit]
@@ -630,10 +694,31 @@
 				[/then]
 			[/elseif]
 			[elseif]
+			[elseif]
 				[variable]
 					name="shackled"
 					equals=no
 				[/variable]
+#"resting=yes" is ignored, event is triggered on every side 1 turn refresh.#
+				#[have_unit]
+					#id="Gwiti Ha'atel"
+					#type=Shackled Dark Adept
+					#resting=yes
+				#[/have_unit]
+#[status]resting=yes[/status] is ignored, event is triggered on every side 1 turn refresh.#
+				#[have_unit]
+					#id="Gwiti Ha'atel"
+					#type=Shackled Dark Adept
+					#[status]
+						#resting=yes"
+					#[/status]
+				#[/have_unit]
+#event isn't triggered at all, even if Gwiti doesn't move.#
+				#[have_unit]
+					#id="Gwiti Ha'atel"
+					#type=Shackled Dark Adept
+					#formula="(resting=yes)"
+				#[/have_unit]
 				[then]
 					[animate_unit]
 						flag=recruiting
